<resources>
    <string name="app_name">AndroidQuizApp</string>
    <string name="default_android_graphic">Default android graphic</string>
    <string name="true_text">TRUE</string>
    <string name="false_text">FALSE</string>
    <string name="correct_answer">That\'s Correct!</string>
    <string name="incorrect_answer">That\'s Incorrect…</string>

    //questions
    <string name="answer_text">QUESTION TEXT</string>
    <string name="question_1">QUESTION 1</string>
    <string name="question_2">QUESTION 2</string>
    <string name="question_3">QUESTION 3</string>
    <string name="question_4">QUESTION 4</string>
    <string name="question_5">QUESTION 5</string>
    <string name="question_6">QUESTION 6</string>
    <string name="question_7">QUESTION 7</string>
    <string name="question_8">QUESTION 8</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">previous button</string>
</resources>