<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/question_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_android_graphic" />

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/answer_text"
        android:padding="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/previous_button"
            android:id="@+id/previous_button"
            android:src="@drawable/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:contentDescription="@string/next_button"
            android:id="@+id/next_button"
            android:src="@drawable/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>

